Changed java version