@@ -4,6 +4,7 @@ import net.weesli.rClaim.management.ClaimManager;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 public class ClaimPlayer {
 
@@ -25,7 +26,7 @@ public class ClaimPlayer {
     }
 
     public List<Claim> getClaims() {
-        return ClaimManager.getClaims().stream().filter(claim -> claim.isOwner(uuid)).toList();
+        return ClaimManager.getClaims().stream().filter(claim -> claim.isOwner(uuid)).collect(Collectors.toList());
     }
 
 
